    eclipse and separate project builds. (Tsuyoshi Ozawa via suresh)

    HADOOP-9334. Upgrade netty version. (Nicolas Liochon via suresh)

    HADOOP-9343. Allow additional exceptions through the RPC layer. (sseth)

    HADOOP-9318. When exiting on a signal, print the signal name first. (Colin
    Patrick McCabe via atm)

    HADOOP-9358. "Auth failed" log should include exception string (todd)

  OPTIMIZATIONS

    HADOOP-9150. Avoid unnecessary DNS resolution attempts for logical URIs
    (todd)

  BUG FIXES

    HADOOP-9294. GetGroupsTestBase fails on Windows. (Chris Nauroth via suresh)

    HADOOP-9305. Add support for running the Hadoop client on 64-bit AIX. (atm)

    HADOOP-9245. mvn clean without running mvn install before fails.
    (Karthik Kambatla via suresh)

    HADOOP-9246 Execution phase for hadoop-maven-plugin should be
    process-resources (Karthik Kambatla and Chris Nauroth via jlowe)

    HADOOP-9297. remove old record IO generation and tests. (tucu)

    HADOOP-9154. SortedMapWritable#putAll() doesn't add key/value classes to
    the map. (Karthik Kambatla via tomwhite)

    HADOOP-9304. remove addition of avro genreated-sources dirs to build. (tucu)

    HADOOP-9267. hadoop -help, -h, --help should show usage instructions.
    (Andrew Wang via atm)

    HADOOP-8569. CMakeLists.txt: define _GNU_SOURCE and _LARGEFILE_SOURCE.
    (Colin Patrick McCabe via atm)

    HADOOP-9323. Fix typos in API documentation. (suresh)

    HADOOP-7487. DF should throw a more reasonable exception when mount cannot
    be determined. (Andrew Wang via atm)

    HADOOP-8917. add LOCALE.US to toLowerCase in SecurityUtil.replacePattern.
    (Arpit Gupta via suresh)

    HADOOP-9342. Remove jline from distribution. (thw via tucu)

    HADOOP-9230. TestUniformSizeInputFormat fails intermittently. 
    (kkambatl via tucu)

    HADOOP-9349. Confusing output when running hadoop version from one hadoop 
    installation when HADOOP_HOME points to another. (sandyr via tucu)